# restruct-studio

./: Cargo.toml  README.md
restruct_lang/: Cargo.toml
restruct_lang/src/: c2syntect.rs  intoc2s.rs  intoir.rs  intoxml.rs  known.rs  lib.rs
restruct_lang/syntaxes/: c2s.yaml
restruct_serialization/: Cargo.toml
restruct_serialization/src/: deserialize.rs  lib.rs  serialize.rs  types.rs
restruct_serialization/tests/: passthrough_tests.rs
restruct_serialization/tests/xml/: doublenested.xml  nested.xml  oneblock.xml  variable.xml
restruct_studio/: Cargo.toml
restruct_studio/src/: app.rs  highlighting.rs  lib.rs  main.rs
