[package]
name = "restruct_studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restruct_lang = { path = "../restruct_lang" }
egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
enum-map = { version = "2", features = ["serde"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
serde = { version = "1", features = ["derive"] }
egui_file = "0.8.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
